MDK-ARM/.vscode/uv4.log
*** Using Compiler 'V6.16', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
Build target 'stm32f405rgt6'
can/bsp_can.c(1): warning: In file included from..../can/bsp_can.h(30): error: conflicting types for 'set_motor_voltage'
_Bool set_motor_voltage(uint8_t id_range, int16_t v1, int16_t v2, int16_t v3, int16_t v4);
      ^
./can/bsp_can.h(27): note: previous declaration is here
void set_motor_voltage(uint8_t id_range, int16_t v1, int16_t v2, int16_t v3, int16_t v4);
     ^
can/bsp_can.c(96): error: invalid argument type 'void' to unary expression
      if (!set_motor_voltage( 0, 0,0,0,0) )
          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
can/bsp_can.c(142): error: conflicting types for 'set_motor_voltage'
_Bool set_motor_voltage(uint8_t id_range, int16_t v1, int16_t v2, int16_t v3, int16_t v4)
      ^
./can/bsp_can.h(27): note: previous declaration is here
void set_motor_voltage(uint8_t id_range, int16_t v1, int16_t v2, int16_t v3, int16_t v4);
     ^
3 errors generated.
compiling bsp_can.c...
../Core/Src/main.c(36): warning: In file included from..../can\bsp_can.h(30): error: conflicting types for 'set_motor_voltage'
_Bool set_motor_voltage(uint8_t id_range, int16_t v1, int16_t v2, int16_t v3, int16_t v4);
      ^
./can\bsp_can.h(27): note: previous declaration is here
void set_motor_voltage(uint8_t id_range, int16_t v1, int16_t v2, int16_t v3, int16_t v4);
     ^
1 error generated.
compiling main.c...
"stm32f405rgt6\stm32f405rgt6.axf" - 4 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:01
